[package]
name = "rust-lang-es-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.28"
leptos = { version = "0.6", features = ["ssr", "experimental-islands"] }
lol_html = "1.1.1"
tokio = { version = "1", features = ["full"] }
gray_matter = "0.2.6"
chrono = { version = "0.4.31", features = ["serde", "unstable-locales"] }
leptos-mdx = { git = "https://github.com/RustLangES/leptos-mdx.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
once_cell = "1.18.0"
rss = { version = "2.0.6", features = ["validation"] }
futures-concurrency = "7.5.0"

[dev-dependencies]
rusty-hook = "0.11.2"
